[package]
name = "wifi_scanner"
version = "0.1.0"
edition = "2024"
description = "A Wi-Fi security testing tool for authorized network testing"
authors = ["Rahees Ahmed"]
license = "MIT"
repository = "https://github.com/raheesahmed/wifi_scanner"
readme = "README.md"
keywords = ["wifi", "security", "network", "scanner", "wireless"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
base64 = "0.21"
md5 = "0.7"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes = "0.8"
block-modes = "0.9"
hex = "0.4"
chrono = "0.4"
